flexforms shall replace the former CODE fields
git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/tt_board/trunk@3627 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/template/board_template1.tmpl
+++ b/template/board_template1.tmpl
@@ -182,7 +182,7 @@ LINK_LAST_POST
 	<!-- ###CONTENT### begin -->
 		<!--###POST### begin -->
 			<TR>
-				<TD align="center" bgcolor="###GC2###">(icon?)</TD>
+				<TD align="center" bgcolor="###GC2###"><IMG src="###PATH###/res/icons/fe/thread.gif"></TD>
 				<TD align="center" bgcolor="###GC2###" width="0" height="0"></TD>
 				<TD bgcolor="###GC2###" width="100%">###GW1B### <!--###LINK###-->###POST_TITLE###<!--###LINK###--><BR>###GW1E###</TD>
 				<TD align="center" bgcolor="###GC1###" nowrap>###GW1B### ###POST_AUTHOR### ###GW1E###</TD>
