check agains spam words
git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/tt_board/trunk@4055 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/template/board_template2.tmpl
+++ b/template/board_template2.tmpl
@@ -120,7 +120,7 @@ For the full list of markers/subparts, see board_template1.tmpl<br>
 	<!-- ###CONTENT###  end -->
 <form action="###FORM_URL###" method="POST">
 	<TR bgcolor="###GC1###">
-		<TD colspan=3 nowrap>###GW1B###<B>Searching: </B>###GW1E###<input type="text" name="tt_board_sword" value="###SEARCH_WORD###">	<input type="submit" value="Search in the board">
+		<TD colspan=3 nowrap>###GW1B###<B>Searching: </B>###GW1E###<input type="text" name="tt_board_sword" value="###SEARCH_WORD###">	<input type="submit" id="boardSearchSubmitId" value="Search in the board">
 		</TD>
 	</TR>
 </form>	
