--- a/template/board_template1.tmpl
+++ b/template/board_template1.tmpl
@@ -193,7 +193,7 @@ LINK_LAST_POST
 	<!-- ###CONTENT###  end -->
 <form action="###FORM_URL###" method="POST">
 	<TR bgcolor="###GC1###">
-		<TD colspan=6 nowrap>###GW1B###<B>Searching: </B>###GW1E###<input type="text" name="tt_board_sword" value="###SEARCH_WORD###">	<input type="submit" value="Search in the board">
+		<TD colspan=6 nowrap>###GW1B###<B>Searching: </B>###GW1E###<input type="text" name="tt_board_sword" value="###SEARCH_WORD###">	<input type="submit" id="boardSearchSubmitId" value="Search in the board">
 		</TD>
 	</TR>
 </form>	
