fix bug with wrong variables in submit.inc incorporate the translations for the ts_language... extensions into locallang.xml new markers for texts to be translated
git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/tt_board/trunk@5827 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/template/board_template1.tmpl
+++ b/template/board_template1.tmpl
@@ -90,10 +90,10 @@ LINK
 <TABLE cellpadding="4" cellspacing="1" border="0" width="98%">
 	<TR bgcolor="###GC3###">
 		<TD>&nbsp;</TD>
-		<TD valign="bottom">###GW3B### <B>Forum</B> ###GW3E###
-		</TD><TD nowrap valign="bottom" align="center"><B>###GW3B### Posts ###GW3E###</B></TD>
-		<TD nowrap valign="bottom" align="center"><B>###GW3B### Threads ###GW3E###</B></TD>
-		<TD nowrap valign="bottom" align="center">###GW3B### <B>Last Post</B>###GW3E###</TD>
+		<TD valign="bottom">###GW3B### <B>###BOARD_FORUM###</B> ###GW3E###
+		</TD><TD nowrap valign="bottom" align="center"><B>###GW3B### ###BOARD_POSTS### ###GW3E###</B></TD>
+		<TD nowrap valign="bottom" align="center"><B>###GW3B### ###BOARD_THREADS### ###GW3E###</B></TD>
+		<TD nowrap valign="bottom" align="center">###GW3B### <B>###BOARD_LAST_POST###</B>###GW3E###</TD>
 	</TR>
 	<!-- ###CONTENT###  begin
 		This is the part of the template substituted with the list of categories and forums: 
