--- a/template/board_template1.tmpl
+++ b/template/board_template1.tmpl
@@ -1,8 +1,8 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
+<!DOCTYPE html PUBLIC "-//W3C//DTD html 4.0 Transitional//EN">
 
 <html>
 <head>
-	<TITLE>Board example template</TITLE>
+	<title>Board example template</title>
 </head>
 
 <body>
@@ -15,7 +15,7 @@
 <br>
 <br>
 <br>
-<H1>BOARD TEMPLATES</H1>
+<h1>BOARD TEMPLATES</h1>
 <h2>EXAMPLE 1 - LIST style</h2>
 
 
@@ -37,7 +37,7 @@ GC3
 GC4
 </pre>
 
-<BR><BR><BR><BR><HR><BR><BR><BR>
+<br><br><br><br><hr><br><br><br>
 <h3>TEMPLATE_OVERVIEW</h3>
 <em>This is the template for the overview of categories and forums.</em><br>
 <pre>
@@ -87,48 +87,48 @@ LINK
 <!-- ###TEMPLATE_OVERVIEW### begin 
 	This is the template for the overview of categories and forums.
 -->
-<TABLE cellpadding="4" cellspacing="1" border="0" width="98%">
-	<TR bgcolor="###GC3###">
-		<TD>&nbsp;</TD>
-		<TD valign="bottom">###GW3B### <B>###BOARD_FORUM###</B> ###GW3E###
-		</TD><TD nowrap valign="bottom" align="center"><B>###GW3B### ###BOARD_POSTS### ###GW3E###</B></TD>
-		<TD nowrap valign="bottom" align="center"><B>###GW3B### ###BOARD_THREADS### ###GW3E###</B></TD>
-		<TD nowrap valign="bottom" align="center">###GW3B### <B>###BOARD_LAST_POST###</B>###GW3E###</TD>
-	</TR>
+<table cellpadding="4" cellspacing="1" border="0" width="98%">
+	<tr bgcolor="###GC3###">
+		<td>&nbsp;</td>
+		<td valign="bottom">###GW3B### <b>###BOARD_FORUM###</b> ###GW3E###
+		</td><td nowrap valign="bottom" align="center"><b>###GW3B### ###BOARD_POSTS### ###GW3E###</b></td>
+		<td nowrap valign="bottom" align="center"><b>###GW3B### ###BOARD_THREADS### ###GW3E###</b></td>
+		<td nowrap valign="bottom" align="center">###GW3B### <b>###BOARD_LAST_POST###</b>###GW3E###</td>
+	</tr>
 	<!-- ###CONTENT###  begin
 		This is the part of the template substituted with the list of categories and forums: 
 	-->
 		<!-- ###CATEGORY### begin
 			Template for the category title 
 		-->
-			<TR bgcolor="###GC4###">
-				<TD colspan="5"><B>###GW2B###<font color="#FFFFFF"><!--###LINK###-->###CATEGORY_TITLE###<!--###LINK###--></FONT>###GW2E###</B></TD>
-			</TR>
+			<tr bgcolor="###GC4###">
+				<td colspan="5"><b>###GW2B###<font color="#FFFFFF"><!--###LINK###-->###CATEGORY_TITLE###<!--###LINK###--></FONT>###GW2E###</b></td>
+			</tr>
 		<!-- ###CATEGORY###  end -->
 		<!-- ###FORUM### begin
 			Template for the display of forum information 
 		-->
-			<TR>
-				<TD bgcolor="###GC2###" align="center" valign="top"><IMG src="clear.gif" width=20 height=1 border="0"></TD>
-				<TD bgcolor="###GC2###" valign="top">###GW1B### <B><!--###LINK###-->###FORUM_TITLE###<!--###LINK###--></B>###GW1E###<BR>###GW2B### ###FORUM_DESCRIPTION### ###GW2E###</TD>
-				<TD bgcolor="###GC1###" align="center" valign="top" nowrap>###GW1B### ###FORUM_POSTS### ###GW1E###</TD>
-				<TD bgcolor="###GC2###" align="center" valign="top" nowrap>###GW1B### ###FORUM_THREADS### ###GW1E###</TD>
-				<TD bgcolor="###GC1###" nowrap valign="top" align="center">###GW2B### <!--###LINK_LAST_POST###-->Last Post!<!--###LINK_LAST_POST###--> ###LAST_POST_DATE### ###LAST_POST_TIME###<BR>###LAST_POST_AUTHOR### - ###LAST_POST_AGE### ###GW2E###</TD>
-			</TR>
+			<tr>
+				<td bgcolor="###GC2###" align="center" valign="top"><IMG src="clear.gif" width=20 height=1 border="0"></td>
+				<td bgcolor="###GC2###" valign="top">###GW1B### <b><!--###LINK###-->###FORUM_TITLE###<!--###LINK###--></b>###GW1E###<br>###GW2B### ###FORUM_DESCRIPTION### ###GW2E###</td>
+				<td bgcolor="###GC1###" align="center" valign="top" nowrap>###GW1B### ###FORUM_POSTS### ###GW1E###</td>
+				<td bgcolor="###GC2###" align="center" valign="top" nowrap>###GW1B### ###FORUM_THREADS### ###GW1E###</td>
+				<td bgcolor="###GC1###" nowrap valign="top" align="center">###GW2B### <!--###LINK_LAST_POST###-->Last Post!<!--###LINK_LAST_POST###--> ###LAST_POST_DATE### ###LAST_POST_TIME###<br>###LAST_POST_AUTHOR### - ###LAST_POST_AGE### ###GW2E###</td>
+			</tr>
 		<!-- ###FORUM### end-->
 		<!-- ###POST### begin
 			Template for the display of latest posts of a forum 
 		-->
-			<TR>
-				<TD align="center" valign="top">NEW!</TD>
-				<TD valign="top"><!--###LINK###-->###GW1B### <B>###POST_TITLE###</B>###GW1E###<!--###LINK###--><BR>###GW2B### ###POST_CONTENT### ###GW2E###</TD>
-				<TD align="center" valign="top" nowrap>###GW1B### ###POST_REPLIES### ###GW1E###</TD>
-				<TD align="center" valign="top" nowrap>###GW1B### &nbsp; ###GW1E###</TD>
-				<TD nowrap valign="top" align="center">###GW2B### ###POST_DATE###  ###POST_TIME###<BR>###POST_AUTHOR### ###GW2E###</TD>
-			</TR>
+			<tr>
+				<td align="center" valign="top">NEW!</td>
+				<td valign="top"><!--###LINK###-->###GW1B### <b>###POST_TITLE###</b>###GW1E###<!--###LINK###--><br>###GW2B### ###POST_CONTENT### ###GW2E###</td>
+				<td align="center" valign="top" nowrap>###GW1B### ###POST_REPLIES### ###GW1E###</td>
+				<td align="center" valign="top" nowrap>###GW1B### &nbsp; ###GW1E###</td>
+				<td nowrap valign="top" align="center">###GW2B### ###POST_DATE###  ###POST_TIME###<br>###POST_AUTHOR### ###GW2E###</td>
+			</tr>
 		<!-- ###POST### end-->
 	<!-- ###CONTENT###  end -->
-</TABLE>
+</table>
 <!-- ###TEMPLATE_OVERVIEW### end -->
 
 
@@ -138,7 +138,7 @@ LINK
 
 
 
-<BR><BR><BR><BR><HR><BR><BR><BR>
+<br><br><br><br><hr><br><br><br>
 <h3>TEMPLATE_FORUM</h3>
 <em>Template for listing of items in a single forum.</em><br>
 <pre>
@@ -172,32 +172,32 @@ LINK_LAST_POST
 <!-- ###TEMPLATE_FORUM### begin
 	Template for listing of items in a single forum.
 -->
-<TABLE border="0" cellpadding="4" border="0" cellspacing="1" width="98%">
-	<TR bgcolor="###GC3###">
-		<TD colspan="3"></TD>
-		<TD align="center" nowrap>###GW3B### <B>Thread Starter</B> ###GW3E###</TD>
-		<TD align="center">###GW3B### <B>Replies</B> ###GW3E###</TD>
-		<TD align="center" nowrap>###GW3B### <B>Last Post</A></B> ###GW3E###</TD>
-	</TR>
+<table border="0" cellpadding="4" border="0" cellspacing="1" width="98%">
+	<tr bgcolor="###GC3###">
+		<td colspan="3"></td>
+		<td align="center" nowrap>###GW3B### <b>Thread Starter</b> ###GW3E###</td>
+		<td align="center">###GW3B### <b>Replies</b> ###GW3E###</td>
+		<td align="center" nowrap>###GW3B### <b>Last Post</A></b> ###GW3E###</td>
+	</tr>
 	<!-- ###CONTENT### begin -->
 		<!--###POST### begin -->
-			<TR>
-				<TD align="center" bgcolor="###GC2###"><IMG src="###PATH###/res/icons/fe/thread.gif"></TD>
-				<TD align="center" bgcolor="###GC2###" width="0" height="0"></TD>
-				<TD bgcolor="###GC2###" width="100%">###GW1B### <!--###LINK###-->###POST_TITLE###<!--###LINK###--><BR>###GW1E###</TD>
-				<TD align="center" bgcolor="###GC1###" nowrap>###GW1B### ###POST_AUTHOR### ###GW1E###</TD>
-				<TD align="center" bgcolor="###GC2###">###GW1B### ###POST_REPLIES### ###GW1E###</TD>
-				<TD bgcolor="###GC2###" nowrap>###GW2B### <!--###LINK_LAST_POST###-->Last post<!--###LINK_LAST_POST###--> ###LAST_POST_DATE### ###LAST_POST_TIME### by ###LAST_POST_AUTHOR### - age: ###LAST_POST_AGE### ###GW2E###</TD>
-			</TR>
+			<tr>
+				<td align="center" bgcolor="###GC2###"><IMG src="###PATH###/res/icons/fe/thread.gif"></td>
+				<td align="center" bgcolor="###GC2###" width="0" height="0"></td>
+				<td bgcolor="###GC2###" width="100%">###GW1B### <!--###LINK###-->###POST_TITLE###<!--###LINK###--><br>###GW1E###</td>
+				<td align="center" bgcolor="###GC1###" nowrap>###GW1B### ###POST_AUTHOR### ###GW1E###</td>
+				<td align="center" bgcolor="###GC2###">###GW1B### ###POST_REPLIES### ###GW1E###</td>
+				<td bgcolor="###GC2###" nowrap>###GW2B### <!--###LINK_LAST_POST###-->Last post<!--###LINK_LAST_POST###--> ###LAST_POST_DATE### ###LAST_POST_TIME### by ###LAST_POST_AUTHOR### - age: ###LAST_POST_AGE### ###GW2E###</td>
+			</tr>
 		<!--###POST### end -->
 	<!-- ###CONTENT###  end -->
-<form action="###FORM_URL###" method="POST">
-	<TR bgcolor="###GC1###">
-		<TD colspan=6 nowrap>###GW1B###<B>Searching: </B>###GW1E###<input type="text" name="tt_board_sword" value="###SEARCH_WORD###">	<input type="submit" id="boardSearchSubmitId" value="Search in the board">
-		</TD>
-	</TR>
+<form action="###FORM_URL###" method="POST" name="tt-board-search">
+	<tr bgcolor="###GC1###">
+		<td colspan=6 nowrap>###GW1B###<b>Searching: </b>###GW1E###<input type="text" name="tt_board_sword" value="###SEARCH_WORD###">	<input type="submit" id="boardSearchSubmitId" value="Search in the board">
+		</td>
+	</tr>
 </form>	
-</TABLE>
+</table>
 <!-- ###TEMPLATE_FORUM### end -->
 
 
@@ -215,7 +215,7 @@ LINK_LAST_POST
 
 
 
-<BR><BR><BR><BR><HR><BR><BR><BR>
+<br><br><br><br><hr><br><br><br>
 <h3>TEMPLATE_THREAD</h3>
 <em>Template for the listing of a the posts in a thread.</em><br>
 <pre>
@@ -254,45 +254,45 @@ LINK_NEXT_POST
 <!-- ###TEMPLATE_THREAD### begin
 	Template for the listing of a the posts in a thread.
 -->
-<TABLE width="98%" border="0" cellspacing="1" cellpadding="4">
-	<TR bgcolor="###GC3###">
-		<TD valign="middle" width="175" nowrap>###GW3B###<B>Author</B>###GW3E###</TD>
-		<TD valign="middle" width="100%">&nbsp;</TD>
-	</TR>
+<table width="98%" border="0" cellspacing="1" cellpadding="4">
+	<tr bgcolor="###GC3###">
+		<td valign="middle" width="175" nowrap>###GW3B###<b>Author</b>###GW3E###</td>
+		<td valign="middle" width="100%">&nbsp;</td>
+	</tr>
 	<!-- ###CONTENT###  begin -->
 		<!--###POST### begin -->
-			<TR bgcolor="###GC1###">
-				<TD width="175" valign="middle" height="16" nowrap>###GW2B### ###POST_DATE### ###POST_TIME### ###GW2E###</TD>
-				<TD valign="middle">###GW1B### ###POST_TITLE### ###GW1E###</TD>
-			</TR>
-			<TR bgcolor="###GC1###">
-				<TD width="175" valign="top" nowrap>
-					###GW1B### <B>###POST_AUTHOR###</B>###GW1E###<BR>
-				</TD>
-				<TD valign="top">
+			<tr bgcolor="###GC1###">
+				<td width="175" valign="middle" height="16" nowrap>###GW2B### ###POST_DATE### ###POST_TIME### ###GW2E###</td>
+				<td valign="middle">###GW1B### ###POST_TITLE### ###GW1E###</td>
+			</tr>
+			<tr bgcolor="###GC1###">
+				<td width="175" valign="top" nowrap>
+					###GW1B### <b>###POST_AUTHOR###</b>###GW1E###<br>
+				</td>
+				<td valign="top">
 					###GW1B### ###POST_CONTENT### ###GW1E###
-				</TD>
-			</TR>
+				</td>
+			</tr>
 		<!--###POST### end -->
 		<!--###POST_1### begin -->
-			<TR bgcolor="###GC2###">
-				<TD width="175" valign="middle" height="16" nowrap>###GW2B### ###POST_DATE### ###POST_TIME### ###GW2E###</TD>
-				<TD valign="middle">###GW1B### ###POST_TITLE### ###GW1E###</TD>
-			</TR>
-			<TR bgcolor="###GC2###">
-				<TD width="175" valign="top" nowrap>
-					###GW1B### <B>###POST_AUTHOR###</B>###GW1E###<BR>
-				</TD>
-				<TD valign="top">
+			<tr bgcolor="###GC2###">
+				<td width="175" valign="middle" height="16" nowrap>###GW2B### ###POST_DATE### ###POST_TIME### ###GW2E###</td>
+				<td valign="middle">###GW1B### ###POST_TITLE### ###GW1E###</td>
+			</tr>
+			<tr bgcolor="###GC2###">
+				<td width="175" valign="top" nowrap>
+					###GW1B### <b>###POST_AUTHOR###</b>###GW1E###<br>
+				</td>
+				<td valign="top">
 					###GW1B### ###POST_CONTENT### ###GW1E###
-				</TD>
-			</TR>
+				</td>
+			</tr>
 		<!--###POST_1### end -->
 	<!-- ###CONTENT###  end -->
-	<TR>
-		<TD colspan=2><!--###LINK_BACK_TO_FORUM###-->###GW2B### <B>< BACK TO FORUM</B> ###GW2E###<!--###LINK_BACK_TO_FORUM###--></TD>
-	</TR>
-</TABLE>
+	<tr>
+		<td colspan=2><!--###LINK_BACK_TO_FORUM###-->###GW2B### <b>< BACK TO FORUM</b> ###GW2E###<!--###LINK_BACK_TO_FORUM###--></td>
+	</tr>
+</table>
 <!-- ###TEMPLATE_THREAD### end -->
 
 
@@ -310,5 +310,5 @@ LINK_NEXT_POST
 
 
 
-</BODY>
-</HTML>
+</body>
+</html>
