--- a/template/board_template2.tmpl
+++ b/template/board_template2.tmpl
@@ -1,8 +1,8 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
+<!DOCTYPE html PUBLIC "-//W3C//DTD html 4.0 Transitional//EN">
 
 <html>
 <head>
-	<TITLE>Board example template</TITLE>
+	<title>Board example template</title>
 </head>
 
 <body>
@@ -15,14 +15,14 @@
 <br>
 <br>
 <br>
-<H1>BOARD TEMPLATES</H1>
+<h1>BOARD TEMPLATES</h1>
 <h2>EXAMPLE 2 - TREE style</h2>
 
 <strong>Notice:</strong> <br>
 For the full list of markers/subparts, see board_template1.tmpl<br>
 
 
-<BR><BR><BR><BR><HR><BR><BR><BR>
+<br><br><br><br><HR><br><br><br>
 <h3>TEMPLATE_OVERVIEW</h3>
 <em>This is the template for the overview of categories and forums.</em><br>
 <br>
@@ -32,42 +32,42 @@ For the full list of markers/subparts, see board_template1.tmpl<br>
 <!-- ###TEMPLATE_OVERVIEW### begin 
 	This is the template for the overview of categories and forums.
 -->
-<TABLE width="100%" cellspacing="0" cellpadding="2" border="0">
+<table width="100%" cellspacing="0" cellpadding="2" border="0">
 	<!-- ###CONTENT###  begin
 		This is the part of the template substituted with the list of categories and forums: 
 	-->
 		<!-- ###FORUM### begin
 			Template for the display of forum information 
 		-->
-	<TR bgcolor="###GC4###">
-		<TD width="60%"><!--###LINK###-->###GW3B###<B>###FORUM_TITLE###</A></B>###GW3E###<!--###LINK###-->&nbsp;&nbsp;###GW3B###&nbsp;&nbsp;Posts: <B>###FORUM_POSTS###</B>###GW3E###
-		</TD>
-	</TR>
-	<TR bgcolor="###GC2###">
-		<TD>###GW1B### ###FORUM_DESCRIPTION### ###GW1E###
-		</TD>
-	</TR>
+	<tr bgcolor="###GC4###">
+		<td width="60%"><!--###LINK###-->###GW3B###<B>###FORUM_TITLE###</A></B>###GW3E###<!--###LINK###-->&nbsp;&nbsp;###GW3B###&nbsp;&nbsp;Posts: <B>###FORUM_POSTS###</B>###GW3E###
+		</td>
+	</tr>
+	<tr bgcolor="###GC2###">
+		<td>###GW1B### ###FORUM_DESCRIPTION### ###GW1E###
+		</td>
+	</tr>
 		<!-- ###FORUM### end -->
 		<!-- ###POST### begin
 			Template for the display of latest posts of a forum 
 		-->
-	<TR bgcolor="###GC1###">
-		<TD><IMG src="typo3/sysext/cms/tslib/media/scripts/new.gif" height="10" width="35"><!--###LINK###-->###GW1B### ###POST_TITLE### ###GW1E###<!--###LINK###--></TD>
-	</TR>
+	<tr bgcolor="###GC1###">
+		<td><img src="typo3/sysext/cms/tslib/media/scripts/new.gif" height="10" width="35"><!--###LINK###-->###GW1B### ###POST_TITLE### ###GW1E###<!--###LINK###--></td>
+	</tr>
 		<!-- ###POST### end -->
 		<!-- ###POST_1### begin
 			See POST marker, this is the alternative layout used every second time.
 		-->
-	<TR bgcolor="###GC2###">
-		<TD><IMG src="typo3/sysext/cms/tslib/media/scripts/new.gif" height="10" width="35"><!--###LINK###-->###GW1B### ###POST_TITLE### ###GW1E###<!--###LINK###--></TD>
-	</TR>
+	<tr bgcolor="###GC2###">
+		<td><img src="typo3/sysext/cms/tslib/media/scripts/new.gif" height="10" width="35"><!--###LINK###-->###GW1B### ###POST_TITLE### ###GW1E###<!--###LINK###--></td>
+	</tr>
 		<!-- ###POST_1### end -->
-	<TR>
-		<TD>&nbsp;
-		</TD>
-	</TR>
+	<tr>
+		<td>&nbsp;
+		</td>
+	</tr>
 	<!-- ###CONTENT### end -->
-</TABLE>
+</table>
 <!-- ###TEMPLATE_OVERVIEW### end -->
 
 
@@ -78,7 +78,7 @@ For the full list of markers/subparts, see board_template1.tmpl<br>
 
 
 
-<BR><BR><BR><BR><HR><BR><BR><BR>
+<br><br><br><br><HR><br><br><br>
 <h3>TEMPLATE_FORUM</h3>
 <em>Template for listing of items in a single forum.</em><br>
 <br>
@@ -89,45 +89,45 @@ For the full list of markers/subparts, see board_template1.tmpl<br>
 
 
 <!-- ###TEMPLATE_FORUM### begin -->
-<TABLE width="100%" cellspacing="0" cellpadding="0" border="0">
+<table width="100%" cellspacing="0" cellpadding="0" border="0">
 
-	<TR><TD colspan="3">###GW1B### <b>###FORUM_TITLE###</b>###GW1E###</TD><TR>
-	<TR>
-		<TD height="21" bgcolor="###GC3###" width="90%">###GW3B### <b>&nbsp;###BOARD_TOPICS###:</b>###GW3E###</TD>
-		<TD height="21" bgcolor="###GC3###">###GW3B###<b>&nbsp;###BOARD_AUTHOR###:</b>###GW3E###</TD>
-		<TD height="21" bgcolor="###GC3###">###GW3B###<b>&nbsp;###BOARD_DATE###:</b>###GW3E###</TD>
-	</TR>
+	<tr><td colspan="3">###GW1B### <b>###FORUM_TITLE###</b>###GW1E###</td><tr>
+	<tr>
+		<td height="21" bgcolor="###GC3###" width="90%">###GW3B### <b>&nbsp;###BOARD_TOPICS###:</b>###GW3E###</td>
+		<td height="21" bgcolor="###GC3###">###GW3B###<b>&nbsp;###BOARD_AUTHOR###:</b>###GW3E###</td>
+		<td height="21" bgcolor="###GC3###">###GW3B###<b>&nbsp;###BOARD_DATE###:</b>###GW3E###</td>
+	</tr>
 	<!-- ###CONTENT###  begin -->
 		<!--###POST### begin -->
-			<TR>
-				<TD bgcolor="###GC1###" nowrap>###POST_THREAD_CODE###<!--###LINK###-->###GW1B###<b>###POST_TITLE###</b>###GW1E###<!--###LINK###--></TD>
-				<TD bgcolor="###GC1###" nowrap>###GW2B### ###POST_AUTHOR### ###GW2E###</TD>
-				<TD bgcolor="###GC1###" nowrap>###GW2B### &nbsp;###POST_DATE### - ###POST_AGE### ###GW2E###</TD>
-			</TR>
+			<tr>
+				<td bgcolor="###GC1###" nowrap>###POST_THREAD_CODE###<!--###LINK###-->###GW1B###<b>###POST_TITLE###</b>###GW1E###<!--###LINK###--></td>
+				<td bgcolor="###GC1###" nowrap>###GW2B### ###POST_AUTHOR### ###GW2E###</td>
+				<td bgcolor="###GC1###" nowrap>###GW2B### &nbsp;###POST_DATE### - ###POST_AGE### ###GW2E###</td>
+			</tr>
 		<!--###POST### end -->
 		<!--###POST_1### begin -->
-			<TR>
-				<TD bgcolor="###GC2###" nowrap>###POST_THREAD_CODE###<!--###LINK###-->###GW1B###<b>###POST_TITLE###</b>###GW1E###<!--###LINK###--></TD>
-				<TD bgcolor="###GC2###" nowrap>###GW2B### ###POST_AUTHOR### ###GW2E###</TD>
-				<TD bgcolor="###GC2###" nowrap>###GW2B### &nbsp;###POST_DATE### - ###POST_AGE### ###GW2E###</TD>
-			</TR>
+			<tr>
+				<td bgcolor="###GC2###" nowrap>###POST_THREAD_CODE###<!--###LINK###-->###GW1B###<b>###POST_TITLE###</b>###GW1E###<!--###LINK###--></td>
+				<td bgcolor="###GC2###" nowrap>###GW2B### ###POST_AUTHOR### ###GW2E###</td>
+				<td bgcolor="###GC2###" nowrap>###GW2B### &nbsp;###POST_DATE### - ###POST_AGE### ###GW2E###</td>
+			</tr>
 		<!--###POST_1### end -->
 		<!--###POST_ACTIVE### begin -->
-			<TR>
-				<TD bgcolor="olive" nowrap>###POST_THREAD_CODE###<!--###LINK###-->###GW1B###<b>###POST_TITLE###</b>###GW1E###<!--###LINK###--></TD>
-				<TD bgcolor="olive" nowrap>###GW2B### ###POST_AUTHOR### ###GW2E###</TD>
-				<TD bgcolor="olive" nowrap>###GW2B### &nbsp;###POST_DATE### - ###POST_AGE### ###GW2E###</TD>
-			</TR>
+			<tr>
+				<td bgcolor="olive" nowrap>###POST_THREAD_CODE###<!--###LINK###-->###GW1B###<b>###POST_TITLE###</b>###GW1E###<!--###LINK###--></td>
+				<td bgcolor="olive" nowrap>###GW2B### ###POST_AUTHOR### ###GW2E###</td>
+				<td bgcolor="olive" nowrap>###GW2B### &nbsp;###POST_DATE### - ###POST_AGE### ###GW2E###</td>
+			</tr>
 		<!--###POST_ACTIVE### end -->
 	<!-- ###CONTENT###  end -->
-<form action="###FORM_URL###" method="POST">
-	<TR bgcolor="###GC1###">
-		<TD colspan=3 nowrap>###GW1B###<B>###BOARD_SEARCH###: </B>###GW1E###<input type="text" name="tt_board_sword" value="###SEARCH_WORD###">	<input type="submit" id="boardSearchSubmitId" value="###BUTTON_SEARCH###">
-		</TD>
-	</TR>
+<form action="###FORM_URL###" method="POST" name="tt-board-search">
+	<tr bgcolor="###GC1###">
+		<td colspan=3 nowrap>###GW1B###<B>###BOARD_SEARCH###: </B>###GW1E###<input type="text" name="tt_board_sword" value="###SEARCH_WORD###">	<input type="submit" id="boardSearchSubmitId" value="###BUTTON_SEARCH###">
+		</td>
+	</tr>
 </form>	
 	
-</TABLE>
+</table>
 <!-- ###TEMPLATE_FORUM### end -->
 
 
@@ -141,7 +141,7 @@ For the full list of markers/subparts, see board_template1.tmpl<br>
 
 
 
-<BR><BR><BR><BR><HR><BR><BR><BR>
+<br><br><br><br><HR><br><br><br>
 <h3>TEMPLATE_THREAD</h3>
 <em>Template for the listing of a the posts in a thread.</em><br><br>
 <br>
@@ -156,41 +156,41 @@ For the full list of markers/subparts, see board_template1.tmpl<br>
 ###GW1B### <b>###FORUM_TITLE###</b>###GW1E### 
 	<!-- ###CONTENT###  begin -->
 		<!--###POST### begin -->
-			<TABLE width="100%" cellspacing="0" cellpadding="3" border="0">
-				<TR>
-					<TD width="60%" align="left" nowrap>
+			<table width="100%" cellspacing="0" cellpadding="3" border="0">
+				<tr>
+					<td width="60%" align="left" nowrap>
 						###GW2B### <b><!--###LINK_BACK_TO_FORUM###-->###BOARD_FORUM_LIST###<!--###LINK_BACK_TO_FORUM###-->&nbsp;&nbsp;|&nbsp;&nbsp;<!--###LINK_FIRST_POST###-->###BOARD_GO_TO_TOP###<!--###LINK_FIRST_POST###-->&nbsp;&nbsp;&nbsp;</b>###GW2E### 
-					</TD>
-					<TD width="40%" align="right" nowrap>###GW2B### <b>
+					</td>
+					<td width="40%" align="right" nowrap>###GW2B### <b>
 						<!--###LINK_PREV_POST###-->###BOARD_PREVIOUS_MESSAGE###<!--###LINK_PREV_POST###-->&nbsp;&nbsp;|
 						&nbsp;&nbsp;<!--###LINK_NEXT_POST###-->###BOARD_NEXT_MESSAGE###<!--###LINK_NEXT_POST###--></b>###GW2E### 
-					</TD>
-				</TR>
-			</TABLE>
-			<TABLE width="100%" cellspacing="0" cellpadding="2" border="0">
-				<TR>
-					<TD bgcolor="###GC3###">###GW3B### &nbsp;Subject:&nbsp;###POST_TITLE### ###GW3E### 
-					</TD>
-				</TR>
-				<TR>
-					<TD bgcolor="###GC1###" valign="TOP">
-						<TABLE width="100%" cellspacing="0" cellpadding="5" border="0">
-							<TR>
-								<TD bgcolor="###GC1###" width="100%" valign="top"><TT><FONT color="#000000">
-			###BOARD_AUTHOR###:&nbsp;###POST_AUTHOR###&nbsp;<BR>###BOARD_DATE###:&nbsp;&nbsp;&nbsp;###POST_DATE### ###POST_TIME###<BR><BR>###POST_CONTENT###</FONT></TT>
-								</TD>
-							</TR>
-						</TABLE>
-					</TD>
-				</TR>
-			</TABLE>
-			<TABLE width="100%" cellspacing="0" cellpadding="3" border="0">
-				<TR>
-					<TD valign="TOP" width="50%">
-					</TD>
-					<TD valign="TOP" width="50%" align="RIGHT" nowrap>###GW2B### <b>&nbsp;<!--###LINK_PREV_THREAD###-->###BOARD_PREVIOUS_TOPIC###<!--###LINK_PREV_THREAD###-->&nbsp;&nbsp;|&nbsp;&nbsp;<!--###LINK_NEXT_THREAD###-->###BOARD_NEXT_TOPIC###<!--###LINK_NEXT_THREAD###--></b>###GW2E### </TD>
-				</TR>
-			</TABLE>
+					</td>
+				</tr>
+			</table>
+			<table width="100%" cellspacing="0" cellpadding="2" border="0">
+				<tr>
+					<td bgcolor="###GC3###">###GW3B### &nbsp;Subject:&nbsp;###POST_TITLE### ###GW3E### 
+					</td>
+				</tr>
+				<tr>
+					<td bgcolor="###GC1###" valign="TOP">
+						<table width="100%" cellspacing="0" cellpadding="5" border="0">
+							<tr>
+								<td bgcolor="###GC1###" width="100%" valign="top"><tt><font color="#000000">
+			###BOARD_AUTHOR###:&nbsp;###POST_AUTHOR###&nbsp;<br>###BOARD_DATE###:&nbsp;&nbsp;&nbsp;###POST_DATE### ###POST_TIME###<br><br>###POST_CONTENT###</font></tt>
+								</td>
+							</tr>
+						</table>
+					</td>
+				</tr>
+			</table>
+			<table width="100%" cellspacing="0" cellpadding="3" border="0">
+				<tr>
+					<td valign="TOP" width="50%">
+					</td>
+					<td valign="TOP" width="50%" align="RIGHT" nowrap>###GW2B### <b>&nbsp;<!--###LINK_PREV_THREAD###-->###BOARD_PREVIOUS_TOPIC###<!--###LINK_PREV_THREAD###-->&nbsp;&nbsp;|&nbsp;&nbsp;<!--###LINK_NEXT_THREAD###-->###BOARD_NEXT_TOPIC###<!--###LINK_NEXT_THREAD###--></b>###GW2E### </td>
+				</tr>
+			</table>
 		<!--###POST### end -->
 	<!-- ###CONTENT###  end -->
 <!-- ###TEMPLATE_THREAD### end -->
@@ -198,5 +198,5 @@ For the full list of markers/subparts, see board_template1.tmpl<br>
 
 
 
-</BODY>
-</HTML>
+</body>
+</html>
