--- a/template/board_template2.tmpl
+++ b/template/board_template2.tmpl
@@ -169,7 +169,7 @@ For the full list of markers/subparts, see board_template1.tmpl<br>
 			</table>
 			<table width="100%" cellspacing="0" cellpadding="2" border="0">
 				<tr>
-					<td bgcolor="###GC3###">###GW3B### &nbsp;Subject:&nbsp;###POST_TITLE### ###GW3E### 
+					<td bgcolor="###GC3###">###GW3B### &nbsp;###BOARD_SUBJECT###&nbsp;###POST_TITLE### ###GW3E### 
 					</td>
 				</tr>
 				<tr>
