--- a/template/board_template3.tmpl
+++ b/template/board_template3.tmpl
@@ -40,9 +40,9 @@ For the full list of markers/subparts, see board_template1.tmpl<br>
 	<tr bgcolor="#7C848C">
 		<td><font face="verdana,arial,helvetica" size="1">&nbsp;</font></td>
 		<td><font face="verdana,arial,helvetica" size="1" color="#FFFFFF">&nbsp;</font></td>
-		<td nowrap align="center"><b><font face="verdana,arial,helvetica" size="1" color="#FFFFFF">Posts</font></b></td>
-		<td nowrap align="center"><b><font face="verdana,arial,helvetica" size="1" color="#FFFFFF">Threads</font></b></td>
-		<td nowrap align="center"><font face="verdana,arial,helvetica" size="1" color="#FFFFFF"><b>Last Post</b></font></td>
+		<td nowrap align="center"><b><font face="verdana,arial,helvetica" size="1" color="#FFFFFF">###BOARD_POSTS###</font></b></td>
+		<td nowrap align="center"><b><font face="verdana,arial,helvetica" size="1" color="#FFFFFF">###BOARD_THREADS###</font></b></td>
+		<td nowrap align="center"><font face="verdana,arial,helvetica" size="1" color="#FFFFFF"><b>###BOARD_LAST_POST###</b></font></td>
 	</tr>
 	<!-- ###CONTENT###  begin
 		This is the part of the template substituted with the list of categories and forums: 
@@ -73,7 +73,7 @@ For the full list of markers/subparts, see board_template1.tmpl<br>
 				<td bgcolor="#E7E3DB" valign="top"><!--###LINK###--><font face="verdana,arial, helvetica" size="1" color="black"><b>###POST_TITLE###</b></font><!--###LINK###--><br><font face="verdana,arial,helvetica" size="1">###POST_CONTENT###</font></td>
 				<td bgcolor="#E7E3DB" align="center" valign="top" nowrap><font face="verdana,arial, helvetica" size="1">###POST_REPLIES###</font></td>
 				<td bgcolor="#E7E3DB" align="center" valign="top" nowrap><font face="verdana,arial, helvetica" size="1">&nbsp;</font></td>
-				<td bgcolor="#E7E3DB" valign="top" align="center"><font face="verdana,arial, helvetica" size="1">###POST_AGE### ago </font><br><font face="arial, helvetica" size="1">by ###POST_AUTHOR###</font></td>
+				<td bgcolor="#E7E3DB" valign="top" align="center"><font face="verdana,arial, helvetica" size="1">###POST_AGE### ###BOARD_AGO### </font><br><font face="arial, helvetica" size="1">###BOARD_BY### ###POST_AUTHOR###</font></td>
 			</tr>
 		<!-- ###POST### end-->
 	<!-- ###CONTENT###  end -->
@@ -94,10 +94,10 @@ For the full list of markers/subparts, see board_template1.tmpl<br>
 <!-- ###TEMPLATE_FORUM### begin -->
 <table border="0" cellpadding="4" border="0" cellspacing="1" width="98%">
 	<tr bgcolor="#7C848C">
-		<td align="center" width="100%"><font face="verdana,arial" size="1" color="white"><b>Subject</b></font></td>
-		<td align="center" nowrap><font face="verdana,arial" size="1" color="white"><b>Thread Starter</b></font></td>
-		<td align="center"><font face="verdana,arial" size="1" color="white"><b>Replies</b></font></td>
-		<td align="center" nowrap><font face="verdana,arial" size="1" color="white"><b>Last Post</b></font></td>
+		<td align="center" width="100%"><font face="verdana,arial" size="1" color="white"><b>###BOARD_SUBJECT###</b></font></td>
+		<td align="center" nowrap><font face="verdana,arial" size="1" color="white"><b>###BOARD_THREAD_STARTER###</b></font></td>
+		<td align="center"><font face="verdana,arial" size="1" color="white"><b>###BOARD_REPLIES###</b></font></td>
+		<td align="center" nowrap><font face="verdana,arial" size="1" color="white"><b>###BOARD_LAST_POST###</b></font></td>
 	</tr>
 	<!-- ###CONTENT### begin -->
 	<!--###POST### begin -->
@@ -129,11 +129,11 @@ For the full list of markers/subparts, see board_template1.tmpl<br>
 -->
 <table width="98%" border="0" cellspacing="1" cellpadding="4">
 	<tr>
-		<td colspan=2><!--###LINK_BACK_TO_FORUM###--><font face="verdana,arial" size="1" color="black"><b>< BACK TO FORUM</b></font><!--###LINK_BACK_TO_FORUM###--></td>
+		<td colspan=2><!--###LINK_BACK_TO_FORUM###--><font face="verdana,arial" size="1" color="black"><b>&lth; ###BOARD_BACK_TO_FORUM###</b></font><!--###LINK_BACK_TO_FORUM###--></td>
 	</tr>
 	<tr bgcolor="#7C848C">
-		<td align="center" nowrap><font face="verdana,arial" size="1" color="white"><b>Author:</b></font></td>
-		<td align="center" nowrap><font face="verdana,arial" size="1" color="white"><b>Content:</b></font></td>
+		<td align="center" nowrap><font face="verdana,arial" size="1" color="white"><b>###BOARD_AUTHOR###:</b></font></td>
+		<td align="center" nowrap><font face="verdana,arial" size="1" color="white"><b>###BOARD_CONTENT###:</b></font></td>
 	</tr>
 	<!-- ###CONTENT###  begin -->
 		<!--###POST### begin -->
@@ -142,7 +142,7 @@ For the full list of markers/subparts, see board_template1.tmpl<br>
 				<td width="80%"><font face="verdana,arial,helvetica" size="2"><b>###POST_TITLE###</b></font></td>
 			</tr>
 			<tr bgcolor="#E7E3DB">
-				<td valign="top"><font face="verdana,arial,helvetica" size="1">Author:<br><b><a href="mailto:###POST_AUTHOR_EMAIL###">###POST_AUTHOR###</a></b></font></td>
+				<td valign="top"><font face="verdana,arial,helvetica" size="1">###BOARD_AUTHOR###:<br><b><a href="mailto:###POST_AUTHOR_EMAIL###">###POST_AUTHOR###</a></b></font></td>
 				<td valign="top" width="80%"><font face="verdana,arial,helvetica" size="1">###POST_CONTENT###</font></td>
 			</tr>
 		<!--###POST### end -->
@@ -152,13 +152,13 @@ For the full list of markers/subparts, see board_template1.tmpl<br>
 				<td width="80%"><font face="verdana,arial,helvetica" size="2"><b>###POST_TITLE###</b></font></td>
 			</tr>
 			<tr bgcolor="#CECAC3">
-				<td valign="top"><font face="verdana,arial,helvetica" size="1">Author:<br><b><a href="mailto:###POST_AUTHOR_EMAIL###">###POST_AUTHOR###</a></b></font></td>
+				<td valign="top"><font face="verdana,arial,helvetica" size="1">###BOARD_AUTHOR###:<br><b><a href="mailto:###POST_AUTHOR_EMAIL###">###POST_AUTHOR###</a></b></font></td>
 				<td valign="top" width="80%"><font face="verdana,arial,helvetica" size="1">###POST_CONTENT###</font></td>
 			</tr>
 		<!--###POST_1### end -->
 	<!-- ###CONTENT###  end -->
 	<tr>
-		<td colspan=2><!--###LINK_BACK_TO_FORUM###--><font face="verdana,arial" size="1" color="black"><b>&lt; BACK TO FORUM</b></font><!--###LINK_BACK_TO_FORUM###--></td>
+		<td colspan=2><!--###LINK_BACK_TO_FORUM###--><font face="verdana,arial" size="1" color="black"><b>&lt; ###BOARD_BACK_TO_FORUM###</b></font><!--###LINK_BACK_TO_FORUM###--></td>
 	</tr>
 </table>
 <!-- ###TEMPLATE_THREAD### end -->
