--- a/template/board_template1.tmpl
+++ b/template/board_template1.tmpl
@@ -1,8 +1,6 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD html 4.0 Transitional//EN">
-
 <html>
 <head>
-	<title>Board example template</title>
+	<title>Board Template $Id$</title>
 </head>
 
 <body>
@@ -12,17 +10,17 @@
 
 
 
-<br>
-<br>
-<br>
+<br />
+<br />
+<br />
 <h1>BOARD TEMPLATES</h1>
 <h2>EXAMPLE 1 - LIST style</h2>
 
 
 
-<br>
-<br>
-<br>
+<br />
+<br />
+<br />
 <pre>
 <strong>Global markers, as set up in TypoScript:</strong>
 These are substituted throughout the whole template.
@@ -37,14 +35,14 @@ GC3
 GC4
 </pre>
 
-<br><br><br><br><hr><br><br><br>
+<br /><br /><br /><br /><br /><br /><br /><br />
 <h3>TEMPLATE_OVERVIEW</h3>
-<em>This is the template for the overview of categories and forums.</em><br>
+<em>This is the template for the overview of categories and forums. -- Forum preview --</em><br />
 <pre>
 
 // Category Markers:
 CATEGORY_TITLE
-CATEGORY_DESCRIPTION 
+CATEGORY_DESCRIPTION
 CATEGORY_FORUMNUMBER
 
 // Category subparts:
@@ -80,51 +78,51 @@ POST_AGE
 // Post Subparts:
 LINK
 </pre>
-<br>
-<br>
+<br />
+<br />
 
 
-<!-- ###TEMPLATE_OVERVIEW### begin 
+<!-- ###TEMPLATE_OVERVIEW### begin
 	This is the template for the overview of categories and forums.
 -->
-<table cellpadding="4" cellspacing="1" border="0" width="98%">
+<table cellpadding="2"  border="0" width="98%" class="tx-ttboard-overview">
 	<tr bgcolor="###GC3###">
 		<td>&nbsp;</td>
-		<td valign="bottom">###GW3B### <b>###BOARD_FORUM###</b> ###GW3E###
-		</td><td nowrap valign="bottom" align="center"><b>###GW3B### ###BOARD_POSTS### ###GW3E###</b></td>
-		<td nowrap valign="bottom" align="center"><b>###GW3B### ###BOARD_THREADS### ###GW3E###</b></td>
-		<td nowrap valign="bottom" align="center">###GW3B### <b>###BOARD_LAST_POST###</b>###GW3E###</td>
+		<td height="21" valign="middle">###GW3B### <b>###BOARD_FORUM###</b> ###GW3E###</td>
+    <td valign="middle" align="center"><b>###GW3B### ###BOARD_POSTS### ###GW3E###</b></td>
+		<td valign="middle" align="center"><b>###GW3B### ###BOARD_THREADS### ###GW3E###</b></td>
+		<td valign="middle" align="center">###GW3B### <b>###BOARD_LAST_POST###</b>###GW3E###</td>
 	</tr>
 	<!-- ###CONTENT###  begin
-		This is the part of the template substituted with the list of categories and forums: 
+		This is the part of the template substituted with the list of categories and forums:
 	-->
 		<!-- ###CATEGORY### begin
-			Template for the category title 
+			Template for the category title
 		-->
 			<tr bgcolor="###GC4###">
 				<td colspan="5"><b>###GW2B###<font color="#FFFFFF"><!--###LINK###-->###CATEGORY_TITLE###<!--###LINK###--></FONT>###GW2E###</b></td>
 			</tr>
 		<!-- ###CATEGORY###  end -->
 		<!-- ###FORUM### begin
-			Template for the display of forum information 
+			Template for the display of forum information
 		-->
 			<tr>
-				<td bgcolor="###GC2###" align="center" valign="top"><IMG src="clear.gif" width=20 height=1 border="0"></td>
-				<td bgcolor="###GC2###" valign="top">###GW1B### <b><!--###LINK###-->###FORUM_TITLE###<!--###LINK###--></b>###GW1E###<br>###GW2B### ###FORUM_DESCRIPTION### ###GW2E###</td>
-				<td bgcolor="###GC1###" align="center" valign="top" nowrap>###GW1B### ###FORUM_POSTS### ###GW1E###</td>
-				<td bgcolor="###GC2###" align="center" valign="top" nowrap>###GW1B### ###FORUM_THREADS### ###GW1E###</td>
-				<td bgcolor="###GC1###" nowrap valign="top" align="center">###GW2B### <!--###LINK_LAST_POST###-->###BOARD_LAST_POST###!<!--###LINK_LAST_POST###--> ###LAST_POST_DATE### ###LAST_POST_TIME###<br>###LAST_POST_AUTHOR### - ###LAST_POST_AGE### ###GW2E###</td>
+				<td bgcolor="###GC2###" align="center" valign="top"><img src="clear.gif" width=20 height=1 border="0"></td>
+				<td bgcolor="###GC2###" valign="top">###GW1B### <b><!--###LINK###-->###FORUM_TITLE###<!--###LINK###--></b>###GW1E###<br />###GW2B### ###FORUM_DESCRIPTION### ###GW2E###</td>
+				<td bgcolor="###GC1###" align="center" valign="top">###GW1B### ###FORUM_POSTS### ###GW1E###</td>
+				<td bgcolor="###GC2###" align="center" valign="top">###GW1B### ###FORUM_THREADS### ###GW1E###</td>
+				<td bgcolor="###GC1###" valign="top" align="center">###GW2B### <!--###LINK_LAST_POST###-->###BOARD_LAST_POST###!<!--###LINK_LAST_POST###--> ###LAST_POST_DATE### ###LAST_POST_TIME###<br />###LAST_POST_AUTHOR### - ###LAST_POST_AGE### ###GW2E###</td>
 			</tr>
 		<!-- ###FORUM### end-->
 		<!-- ###POST### begin
-			Template for the display of latest posts of a forum 
+			Template for the display of latest posts of a forum
 		-->
 			<tr>
 				<td align="center" valign="top">NEW!</td>
-				<td valign="top"><!--###LINK###-->###GW1B### <b>###POST_TITLE###</b>###GW1E###<!--###LINK###--><br>###GW2B### ###POST_CONTENT### ###GW2E###</td>
-				<td align="center" valign="top" nowrap>###GW1B### ###POST_REPLIES### ###GW1E###</td>
-				<td align="center" valign="top" nowrap>###GW1B### &nbsp; ###GW1E###</td>
-				<td nowrap valign="top" align="center">###GW2B### ###POST_DATE###  ###POST_TIME###<br>###POST_AUTHOR### ###GW2E###</td>
+				<td valign="top"><!--###LINK###-->###GW1B### <b>###POST_TITLE###</b>###GW1E###<!--###LINK###--><br />###GW2B### ###POST_CONTENT### ###GW2E###</td>
+				<td align="center" valign="top">###GW1B### ###POST_REPLIES### ###GW1E###</td>
+				<td align="center" valign="top">###GW1B### &nbsp; ###GW1E###</td>
+				<td valign="top" align="center">###GW2B### ###POST_DATE###  ###POST_TIME###<br />###POST_AUTHOR### ###GW2E###</td>
 			</tr>
 		<!-- ###POST### end-->
 	<!-- ###CONTENT###  end -->
@@ -138,15 +136,15 @@ LINK
 
 
 
-<br><br><br><br><hr><br><br><br>
+<br /><br /><br /><br /><hr><br /><br /><br />
 <h3>TEMPLATE_FORUM</h3>
-<em>Template for listing of items in a single forum.</em><br>
+<em>Template for listing of items in a single forum.</em><br />
 <pre>
 
 
 // Post Markers
 POST_THREAD_CODE
-POST_TITLE 
+POST_TITLE
 POST_CONTENT
 POST_REPLIES
 POST_AUTHOR
@@ -163,41 +161,40 @@ LAST_POST_AGE
 
 // Post Subparts
 LINK
-LINK_LAST_POST 
+LINK_LAST_POST
 
 </pre>
-<br>
-<br>
+<br />
+<br />
 
 <!-- ###TEMPLATE_FORUM### begin
 	Template for listing of items in a single forum.
 -->
-<table border="0" cellpadding="4" border="0" cellspacing="1" width="98%">
+<form action="###FORM_URL###" method="POST" name="tt-board-search">
+<table border="0" cellpadding="4" border="0" cellspacing="1" width="100%" class="tx-ttboard-table-forum">
 	<tr bgcolor="###GC3###">
-		<td colspan="3"></td>
-		<td align="center" nowrap>###GW3B### <b>###BOARD_THREAD_STARTER###</b> ###GW3E###</td>
+		<td colspan="2">###GW3B### <b>###FORUM_TITLE###</b> ###GW3E###</td>
+		<td align="center">###GW3B### <b>###BOARD_THREAD_STARTER###</b> ###GW3E###</td>
 		<td align="center">###GW3B### <b>###BOARD_REPLIES###</b> ###GW3E###</td>
-		<td align="center" nowrap>###GW3B### <b>###BOARD_LAST_POST###</A></b> ###GW3E###</td>
+		<td colspan="2" align="center">###GW3B### <b>###BOARD_LAST_POST###</b> ###GW3E###</td>
 	</tr>
 	<!-- ###CONTENT### begin -->
 		<!--###POST### begin -->
 			<tr>
-				<td align="center" bgcolor="###GC2###"><IMG src="###PATH###/res/icons/fe/thread.gif"></td>
-				<td align="center" bgcolor="###GC2###" width="0" height="0"></td>
-				<td bgcolor="###GC2###" width="100%">###GW1B### <!--###LINK###-->###POST_TITLE###<!--###LINK###--><br>###GW1E###</td>
-				<td align="center" bgcolor="###GC1###" nowrap>###GW1B### ###POST_AUTHOR### ###GW1E###</td>
+				<td align="center" bgcolor="###GC2###" width="20"><img src="###PATH###res/icons/fe/thread.gif"></td>
+				<td bgcolor="###GC2###">###GW1B### <!--###LINK###-->###POST_TITLE###<!--###LINK###--><br />###GW1E###</td>
+				<td align="center" bgcolor="###GC1###">###GW1B### ###POST_AUTHOR### ###GW1E###</td>
 				<td align="center" bgcolor="###GC2###">###GW1B### ###POST_REPLIES### ###GW1E###</td>
-				<td bgcolor="###GC2###" nowrap>###GW2B### <!--###LINK_LAST_POST###-->###BOARD_LAST_POST###<!--###LINK_LAST_POST###--> ###LAST_POST_DATE### ###LAST_POST_TIME### ###BOARD_BY### ###LAST_POST_AUTHOR### - ###BOARD_AGE###: ###LAST_POST_AGE### ###GW2E###</td>
+				<td colspan="2" align="center" bgcolor="###GC2###" >###GW2B### <!--###LINK_LAST_POST###-->###BOARD_LAST_POST###<!--###LINK_LAST_POST###--> ###LAST_POST_DATE### ###LAST_POST_TIME### ###BOARD_BY### ###LAST_POST_AUTHOR### - ###BOARD_AGE###: ###LAST_POST_AGE### ###GW2E###</td>
 			</tr>
 		<!--###POST### end -->
 	<!-- ###CONTENT###  end -->
-<form action="###FORM_URL###" method="POST" name="tt-board-search">
 	<tr bgcolor="###GC1###">
-		<td colspan=6 nowrap>###GW1B###<b>Searching: </b>###GW1E###<input type="text" name="tt_board_sword" value="###SEARCH_WORD###">	<input type="submit" id="boardSearchSubmitId" value="Search in the board">
+  	<td colspan=6>###GW1B###<b>Suchen: </b>###GW1E###<input type="text" name="tt_board_sword" value="###SEARCH_WORD###">	<input type="submit" id="boardSearchSubmitId" value="Search in the board">
 		</td>
 	</tr>
-</form>	
 </table>
+</form>
 <!-- ###TEMPLATE_FORUM### end -->
 
 
@@ -215,9 +212,9 @@ LINK_LAST_POST
 
 
 
-<br><br><br><br><hr><br><br><br>
+<br /><br /><br /><br /><hr><br /><br /><br />
 <h3>TEMPLATE_THREAD</h3>
-<em>Template for the listing of a the posts in a thread.</em><br>
+<em>Template for the listing of a the posts in a thread.</em><br />
 <pre>
 
 // General subparts
@@ -231,7 +228,7 @@ FORUM_TITLE
 
 // Post Markers
 POST_THREAD_CODE
-POST_TITLE 
+POST_TITLE
 POST_CONTENT
 POST_REPLIES
 POST_AUTHOR
@@ -247,27 +244,27 @@ LINK_PREV_POST
 LINK_NEXT_POST
 
 </pre>
-<br>
-<br>
+<br />
+<br />
 
 
 <!-- ###TEMPLATE_THREAD### begin
 	Template for the listing of a the posts in a thread.
 -->
-<table width="98%" border="0" cellspacing="1" cellpadding="4">
+<table width="98%" border="0" cellspacing="1" cellpadding="4" class="tx-ttboard-table-thread">
 	<tr bgcolor="###GC3###">
-		<td valign="middle" width="175" nowrap>###GW3B###<b>###BOARD_AUTHOR###</b>###GW3E###</td>
+		<td valign="middle" width="175">###GW3B###<b>###BOARD_AUTHOR###</b>###GW3E###</td>
 		<td valign="middle" width="100%">&nbsp;</td>
 	</tr>
 	<!-- ###CONTENT###  begin -->
 		<!--###POST### begin -->
 			<tr bgcolor="###GC1###">
-				<td width="175" valign="middle" height="16" nowrap>###GW2B### ###POST_DATE### ###POST_TIME### ###GW2E###</td>
+				<td width="175" valign="middle" height="16">###GW2B### ###POST_DATE### ###POST_TIME### ###GW2E###</td>
 				<td valign="middle">###GW1B### ###POST_TITLE### ###GW1E###</td>
 			</tr>
 			<tr bgcolor="###GC1###">
-				<td width="175" valign="top" nowrap>
-					###GW1B### <b>###POST_AUTHOR###</b>###GW1E###<br>
+				<td width="175" valign="top">
+					###GW1B### <b>###POST_AUTHOR###</b>###GW1E###<br />
 				</td>
 				<td valign="top">
 					###GW1B### ###POST_CONTENT### ###GW1E###
@@ -276,12 +273,12 @@ LINK_NEXT_POST
 		<!--###POST### end -->
 		<!--###POST_1### begin -->
 			<tr bgcolor="###GC2###">
-				<td width="175" valign="middle" height="16" nowrap>###GW2B### ###POST_DATE### ###POST_TIME### ###GW2E###</td>
+				<td width="175" valign="middle" height="16">###GW2B### ###POST_DATE### ###POST_TIME### ###GW2E###</td>
 				<td valign="middle">###GW1B### ###POST_TITLE### ###GW1E###</td>
 			</tr>
 			<tr bgcolor="###GC2###">
-				<td width="175" valign="top" nowrap>
-					###GW1B### <b>###POST_AUTHOR###</b>###GW1E###<br>
+				<td width="175" valign="top">
+					###GW1B### <b>###POST_AUTHOR###</b>###GW1E###<br />
 				</td>
 				<td valign="top">
 					###GW1B### ###POST_CONTENT### ###GW1E###
@@ -290,7 +287,7 @@ LINK_NEXT_POST
 		<!--###POST_1### end -->
 	<!-- ###CONTENT###  end -->
 	<tr>
-		<td colspan=2><!--###LINK_BACK_TO_FORUM###-->###GW2B### <b>< BACK TO FORUM</b> ###GW2E###<!--###LINK_BACK_TO_FORUM###--></td>
+		<td colspan=2><!--###LINK_BACK_TO_FORUM###-->###GW2B### <b>&lt; BACK TO FORUM</b> ###GW2E###<!--###LINK_BACK_TO_FORUM###--></td>
 	</tr>
 </table>
 <!-- ###TEMPLATE_THREAD### end -->
