* put the locallang php files into the xlf format

--- a/template/board_template3.tmpl
+++ b/template/board_template3.tmpl
@@ -2,7 +2,7 @@
 
 <html>
 <head>
-	<title>Board example template $Id$</title>
+	<title>Board example template</title>
 </head>
 
 <body>
@@ -33,7 +33,7 @@ For the full list of markers/subparts, see board_template1.tmpl<br>
 <br>
 
 
-<!-- ###TEMPLATE_OVERVIEW### begin 
+<!-- ###TEMPLATE_OVERVIEW### begin
 	This is the template for the overview of categories and forums.
 -->
 <table cellpadding="4" cellspacing="1" border="0" width="98%">
@@ -45,17 +45,17 @@ For the full list of markers/subparts, see board_template1.tmpl<br>
 		<td nowrap align="center"><font face="verdana,arial,helvetica" size="1" color="#FFFFFF"><b>###BOARD_LAST_POST###</b></font></td>
 	</tr>
 	<!-- ###CONTENT###  begin
-		This is the part of the template substituted with the list of categories and forums: 
+		This is the part of the template substituted with the list of categories and forums:
 	-->
 		<!-- ###CATEGORY### begin
-			Template for the category title 
+			Template for the category title
 		-->
 			<tr bgcolor="#05437E">
 				<td colspan="5"><!--###LINK###--><b><font face="arial, helvetica" size="2" color="#FFFFFF">###CATEGORY_TITLE###</font></b><!--###LINK###--><br><font face="arial, helvetica" size="1" color="#FFFFFF">###CATEGORY_DESCRIPTION###</font></td>
 			</tr>
 		<!-- ###CATEGORY###  end -->
 		<!-- ###FORUM### begin
-			Template for the display of forum information 
+			Template for the display of forum information
 		-->
 			<tr>
 				<td bgcolor="#CECAC3" align="center" valign="top"><IMG src="clear.gif" width=20 height=1 border="0"></td>
@@ -66,7 +66,7 @@ For the full list of markers/subparts, see board_template1.tmpl<br>
 			</tr>
 		<!-- ###FORUM### end-->
 		<!-- ###POST### begin
-			Template for the display of latest posts of a forum 
+			Template for the display of latest posts of a forum
 		-->
 			<tr>
 				<td bgcolor="#E7E3DB" align="center" valign="top"></td>
@@ -125,7 +125,7 @@ For the full list of markers/subparts, see board_template1.tmpl<br>
 
 
 <!-- ###TEMPLATE_THREAD### begin
-	Template for the listing of a the posts in a thread 
+	Template for the listing of a the posts in a thread
 -->
 <table width="98%" border="0" cellspacing="1" cellpadding="4">
 	<tr>
